src/test/deca/context/invalid/created/instanceof_same_type/INT.deca
// Description:
//		instanceof sur deux types egaux primitif
// Resultats:
// 		Erreur contexte : Ligne 7 : Contextual error, instanceof must be called with an instance and a class

{
	5 instanceof int;
}
